Tue Jun 26 23:21:57 UTC 2007  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkSetMap.h:
        * dds/DCPS/transport/framework/DataLinkSetMap.cpp:

          More std::map replacements for ACE equivalents.

Tue Jun 26 21:57:56 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * etc/dds.doxygen:

          One more attempt at getting Doxygen to understand ACE_THROW_SPEC().

Tue Jun 26 21:34:47 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkSet.cpp:

          Removed and unused local variable.

Tue Jun 26 20:00:19 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * etc/dds.doxygen:

          No portable way to reference TAO (i.e. $TAO_ROOT) inside the doxygen
          file, so we can't reference it.  In the future we should support
          linking to ACE+TAO documentation via the use of doxytag and
          installdox.

Tue Jun 26 19:47:51 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/Serializer.h:
        * dds/DCPS/transport/framework/TransportReceiveStrategy.cpp:
        * dds/InfoRepo/UpdateManager.h:

          Fixed comments that were causing Doxygen to emit errors/warnings.

        * tests/DCPS/LivelinessTest/publisher.cpp:
        * tests/DCPS/LivelinessTest/subscriber.cpp:
        * tests/transport/mcast_simple/pub_main.cpp:
        * tests/transport/mcast_simple/sub_main.cpp:

          Fixed typo which was including a .cpp instead of a header.

        * tests/transport/mcast_simple/mcast.conf:
        * tests/transport/mcast_simple/run_test.pl:

          Changed this test to dynamically load the transport library, unless
          it's a static build.

Tue Jun 26 19:10:03 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/Registered_Data_Types.h:
        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.inl:
        * dds/DCPS/transport/framework/DataLinkSet.cpp: