@@ -4,6 +4,7 @@
 #include "TransportReceiveListener.h"
 #include "ReceivedDataSample.h"
 #include "EntryExit.h"
+#include "dds/DCPS/Util.h"
 
 ACE_INLINE
 TAO::DCPS::ReceiveListenerSet::ReceiveListenerSet()
@@ -17,7 +18,7 @@ TAO::DCPS::ReceiveListenerSet::insert(RepoId                    subscriber_id,
                                       TransportReceiveListener* listener)
 {
   DBG_ENTRY_LVL("ReceiveListenerSet","insert",5);
-  return this->map_.bind(subscriber_id, listener);
+  return bind(map_, std::make_pair(subscriber_id, listener));
 }
 
 
@@ -25,7 +26,7 @@ ACE_INLINE int
 TAO::DCPS::ReceiveListenerSet::remove(RepoId subscriber_id)
 {
   DBG_ENTRY_LVL("ReceiveListenerSet","remove",5);
-  if (this->map_.unbind(subscriber_id) != 0)
+  if (unbind(map_, subscriber_id) != 0)
     {
       ACE_ERROR_RETURN((LM_DEBUG,
                         "(%P|%t) subscriber_id (%d) not found in map_.\n",
@@ -41,7 +42,7 @@ ACE_INLINE ssize_t
 TAO::DCPS::ReceiveListenerSet::size() const
 {
   DBG_ENTRY_LVL("ReceiveListenerSet","size",5);
-  return this->map_.current_size();
+  return map_.size();
 }
 
 
@@ -49,17 +50,16 @@ ACE_INLINE void
 TAO::DCPS::ReceiveListenerSet::data_received(const ReceivedDataSample& sample)
 {
   DBG_ENTRY_LVL("ReceiveListenerSet","data_received",5);
-  MapType::ENTRY* entry;
 
   char* ptr = sample.sample_->rd_ptr ();
 
-  for (MapType::ITERATOR itr(this->map_);
-       itr.next(entry);
-       itr.advance())
+  for (MapType::iterator itr = map_.begin();
+    itr != map_.end();
+    ++itr)
   {
     // reset read pointer because demarshal (in data_received()) moves it.
     sample.sample_->rd_ptr (ptr);
-    entry->int_id_->data_received(sample);
+    itr->second->data_received(sample);
   }
 }
 
